chore: remove unused code

--- a/.env.example
+++ b/.env.example
@@ -67,8 +67,8 @@ WARPCAST_DM_KEY=
 # Powers OpenRank rules
 OPENRANK_API_KEY=
 
-# Enable queues in development 
-# ENABLE_QUEUES=true
+# Enable queues
+ENABLE_QUEUES=false
 
 # Hypersub contract addresses for billing
 # Legacy deprecated hypersub
