chore:update redis url

--- a/.env.example
+++ b/.env.example
@@ -12,9 +12,7 @@ SESSION_SECRET=
 DATABASE_URL=postgresql://user:password@host:port/database
 
 # Redis used for all queuing
-REDIS_HOST=localhost
-REDIS_PORT=6379
-REDIS_PASSWORD=
+REDIS_URL=redis://localhost:6379
 
 # Available from infura.io
 INFURA_PROJECT_ID=
