--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "type": "module",
   "packageManager": "pnpm@9.11.0",
   "scripts": {
-    "build": "pnpm exec prisma generate && remix build --sourcemap && sentry-upload-sourcemaps --org double-play --project auto-mod",
+    "build": "pnpm exec prisma generate && remix build",
     "db:reset": "./scripts/dbReset.sh",
-    "db:prod": "fly pg connect -a automod-pg -d automod",
     "dev": "remix dev --manual",
     "bullboard": "tsx bullboard/index.ts",
     "test": "exit 0",
