--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,8 +4,8 @@
     "display": "standalone",
     "scope": "/",
     "start_url": "/",
-    "name": "automod",
-    "short_name": "automod",
+    "name": "modbot",
+    "short_name": "modbot",
     "description": "Enforce channel norms with bots",
     "icons": [
         {
@@ -16,16 +16,6 @@
         {
             "src": "/android-chrome-512x512.png",
             "sizes": "512x512",
-            "type": "image/png"
-        },
-        {
-            "src": "/icon-256x256.png",
-            "sizes": "256x256",
-            "type": "image/png"
-        },
-        {
-            "src": "/icon-384x384.png",
-            "sizes": "384x384",
             "type": "image/png"
         }
     ]
