--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
+  "search.exclude": {
+    "**/.git": true,
+    "**/node_modules": true,
+    "package-lock.json": true,
+    "**/.cache": true
+  },
   "typescript.preferences.importModuleSpecifier": "non-relative"
 }
